--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.22.2",
+    "babel-plugin-import": "^1.12.1",
+    "customize-cra": "^0.5.0",
     "react": "^16.9.0",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
