--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "dependencies": {
     "antd": "^3.22.2",
     "babel-plugin-import": "^1.12.1",
+    "create-react-app": "^3.1.1",
     "customize-cra": "^0.5.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -31,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/githubcyj/ReactDemo.git",
+  "author": "huye <1031377677@qq.com>",
+  "license": "MIT"
 }
