--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.22.2",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.1",
     "create-react-app": "^3.1.1",
     "customize-cra": "^0.5.0",
@@ -13,7 +14,8 @@
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -39,5 +41,6 @@
   "main": "index.js",
   "repository": "https://github.com/githubcyj/ReactDemo.git",
   "author": "huye <1031377677@qq.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "proxy": "http://localhost:5000"
 }
