--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-import": "^1.12.1",
     "create-react-app": "^3.1.1",
     "customize-cra": "^0.5.0",
+    "jsonp": "^0.2.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.9.0",
