--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "react-admin",
-  "version": "0.1.0",
-  "private": true,
+  "name": "reactdemo",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "config-overrides.js",
   "dependencies": {
-    "antd": "^3.22.2",
-    "axios": "^0.19.0",
-    "babel-plugin-import": "^1.12.1",
-    "create-react-app": "^3.1.1",
-    "customize-cra": "^0.5.0",
-    "jsonp": "^0.2.1",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "react": "^16.9.0",
-    "react-app-rewired": "^2.1.3",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "store": "^2.0.12"
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@fullcalendar/react": "^4.4.0",
+    "@fullcalendar/resource-timeline": "^4.4.0",
+    "antd": "^4.2.4",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "less-loader": "^6.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --open --config webpack.dev.config.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/githubcyj/ReactDemo.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/githubcyj/ReactDemo/issues"
   },
-  "main": "index.js",
-  "repository": "https://github.com/githubcyj/ReactDemo.git",
-  "author": "huye <1031377677@qq.com>",
-  "license": "MIT",
-  "proxy": "http://localhost:5000"
+  "homepage": "https://github.com/githubcyj/ReactDemo#readme"
 }
