--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/react": "^4.4.0",
     "@fullcalendar/resource-timeline": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "antd": "^4.2.4",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
