--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
     "url-loader": "^4.1.0"
   },
   "devDependencies": {
