--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.10.1",
     "@fullcalendar/core": "^4.4.0",
     "@fullcalendar/daygrid": "^4.4.0",
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/react": "^4.4.0",
     "@fullcalendar/resource-timeline": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "antd": "^4.2.4",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.5.3",
@@ -28,7 +32,7 @@
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.5",
     "url-loader": "^4.1.0"
   },
   "devDependencies": {
