--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
