--- a/webpack-5/package.json
+++ b/webpack-5/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.1",
     "cross-env": "^5.1.6",
     "css-loader": "^5.0.1",
     "file-loader": "^1.1.11",
